syntax = "proto3";
package net.trajano.grpcchunker;

message SavedFormMeta {
  string id = 1;
}

message SavedFormChunk {
  oneof type {
    SavedFormMeta meta = 1;
    bytes data = 2;
  }
}

message MetaAndData {
  string id = 1;
  bytes data = 2;
}

message ResponseMetaAndData {
  string id = 1;
  bytes data = 2;
}

message ResponseFormChunk {
  oneof type {
    SavedFormMeta meta = 1;
    bytes data = 2;
  }
}
service GrpcStreams {
  rpc bidirectionalStreaming(stream SavedFormChunk) returns (stream ResponseFormChunk) {}
  rpc streamingUpload(stream SavedFormChunk) returns (ResponseMetaAndData) {}
  rpc streamingDownload(MetaAndData) returns (stream ResponseFormChunk) {}
}